--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 # Anthogz.github.io
 <p>This is my link:</p>
+<div class="menu" style="display: flex; gap: 10px; padding: 10px;">
+
+<button onclick="location.href='index.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Home</button>
+
+<button onclick="location.href='recipe.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Recipe</button>
+
+<button onclick="location.href='blog.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Blog</button>
+
+</div>
