--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
-# Anthogz.github.io
-<p>This is my link:</p>
-<div class="menu" style="display: flex; gap: 10px; padding: 10px;">
-
-<button onclick="location.href='index.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Home</button>
-
-<button onclick="location.href='recipe.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Recipe</button>
-
-<button onclick="location.href='blog.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Blog</button>
-
-</div>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+<meta charset="UTF-8"> 
+<meta name="viewport" 
+content="width=device-width, initial-scale=1.0">
+	<title>My Homepage</title> 
+    <style> 
+    body { font-family: Cursive, sans-serif; margin: 0; padding: 0; background-color: grey; 
+    } 
+    header { 
+    background-color: grey; color: black; padding: 1rem; text-align: center; 
+    } nav { 
+    background-color: grey; overflow: hidden; 
+    } 
+    nav a { float: left; display: block; color: black; text-align: center; padding: 14px 16px; text-decoration: none;
+    } nav a:hover { background-color: grey; color: black; 
+    } main { padding: 20px; 
+    } footer { background-color: grey; color: #fff; text-align: center; padding: 1rem; position: fixed; bottom: 0; width: 100%;
+    } 
+    </style> 
+    </head> 
+    <body> 
+    <header> 
+    <h1>Anthony Homepage</h1> 
+    </header> 
+    <nav> 
+    <button onclick="location.href='index.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Home</button><button onclick="location.href='recipe.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Recipe</button> <button onclick="location.href='blog.html'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Blog</button>
+    </nav> 
+    <main> 
+    <h2>About Me</h2> 
+    <p>I am 18 years old who currently goes to Porter HighSchool, my hobbies are working on my truck, going to meets with my truck possibly even race every now and than. </p> 
+    </main> 
+    <footer> 
+    <p></p> 
+    </footer> 
+    </body> 
+    </html>
